[metadata]
name = lsn-knowledge-base
summary = Limestone Networks Knowledge Base
description-file =
    README.md
author = Limestone Networks
author-email = admin@limestonenetworks.com
home-page = https://www.limestonenetworks.com
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
